# morselParallelism

./: CMakeLists.txt  Dispatcher.h  JobState.h  Results.h  Work.h  Worker.h  main.cpp  timeUtils.h
